# Raster

./: .clang-format  CMakeLists.txt  LICENSE  README.md
examples/: raster-config.json
include/: json_func.inl  observer.h  pch.h  raster.h
include/renderer/: loader.h  render.h  scene.h
include/shaders/: shader.h
src/: main.cpp
src/renderer/: loader.cpp  render.cpp  scene.cpp
